update : product 불러오는 로직 수정