@@ -1,17 +1,18 @@
 package com.dsm.kdr_backend.domain.product.service;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.dsm.kdr_backend.domain.product.category.domain.repository.CategoryRepository;
 import com.dsm.kdr_backend.domain.product.domain.Product;
 import com.dsm.kdr_backend.domain.product.domain.repository.ProductCategoryMapperRepository;
 import com.dsm.kdr_backend.domain.product.domain.repository.ProductRepository;
+import com.dsm.kdr_backend.domain.product.exception.NotFoundProductException;
 import com.dsm.kdr_backend.domain.product.presentation.dto.response.ProductsResponse;
 import com.dsm.kdr_backend.global.aws.S3Util;
 
@@ -32,17 +33,27 @@ public class GetSearchProductCategoryService {
 				return productCategoryMapper.getProductId();
 			}).collect(Collectors.toList());
 
-		Page<Product> products = productRepository.findAllByIdOrderByIdDesc(productIds, page);
+		List<Product> products = new ArrayList<>(); 
+		for(Long id : productIds) {
+			products.add(productRepository.findByIdOrderByIdDesc(id)
+				.orElseThrow(() -> NotFoundProductException.EXCEPTION));
+		}
 
-		return new ProductsResponse(products.getTotalPages(),
-			products.map(product -> {
+		int startPage = page.getPageSize() * page.getPageNumber() -1;
+		int totalPages = products.size()/page.getPageSize();
+		List<Product> processedProducts = products.subList(startPage,startPage+page.getPageSize());
+
+		processedProducts.sort((product1, product2) -> (int)(product2.getId() - product1.getId()));
+
+		return new ProductsResponse(totalPages,
+			processedProducts.stream().map(product -> {
 					return ProductsResponse.ProductResponse.builder()
 						.id(product.getId())
 						.image(s3Util.getS3ObjectUrl(product.getPath()))
 						.name(product.getName())
 						.build();
 				}
-			).toList());
+			).collect(Collectors.toList()));
 
 	}
 
